--- a/about.html
+++ b/about.html
@@ -3,60 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/import.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+
 <body>
   <div class="wrapper">
+<!--header ------------------------------------------------>
     <header class="header">
-    <div class="header__nav">
-    <nav class="header__nav--l">
-    <ul class="social-link">
-    <li class="social-link__fb">F</li>
-    <li class="social-link__tw">T</li>
-    </ul>
-    </nav>
-    <nav class="header__nav--r">
-    <ul class="page-nav">
-    <li class="page-nav__list">About</li>
-    <li class="page-nav__list">Works</li>
-    <li class="page-nav__list">Blog</li>
-    <li class="page-nav__list">Contact</li>
-    </ul>
-    </nav>
-    </div>
-    
+      <div class="header__nav">
+        <nav class="header__nav--l">
+          <ul class="social-link">
+            <li class="social-link__fb">F</li>
+            <li class="social-link__tw">T</li>
+          </ul>
+        </nav>
+        <nav class="header__nav--r">
+          <ul class="page-nav">
+            <li class="page-nav__list">About</li>
+            <li class="page-nav__list">Works</li>
+            <li class="page-nav__list">Blog</li>
+            <li class="page-nav__list">Contact</li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <div class="about-page">
-    <main>
-    <article class="content">
-    <h2 class="content__header">About Me</h2>
-    <div class="inner">
-    <div class="inner__l">
-    <figure>
-    <img alt="清野あずみの写真" class="self-photo" height="350" src="/assets/self_photo_cl-b38ddbae8bcfa9ef639a676253cccb26687f0fffa11ee62ec8a2ee5cab94e8e4.png">
-    </figure>
-    </div>
-    <div class="inner__r">
-    <section class="profile">
-    <p class="profile__header">名前：清野あずみ</p>
-    <div class="profile__history">
-    <p>筑波大学芸術専門学群卒業</p>
-    <p>同大学大学院人間総合化学研究科 修了（教育学修士）</p>
-    <p>美術科教員を経て、若者就労支援のNPOへ</p>
-    <p>「はたらく」に困難を抱える若者にITを通じた就労支援を届ける一方で、車内デザインを担当。</p>
-    <p>2019年、プログラミングスクールを修了し、プログラミングを習得。</p>
-    <p>「生きづらさ」を抱える人や、そんな人たちを支える誰か、</p>
-    <br>および地域で頑張っているあの人を、<br>
-    <br>デザインやプログラミングを通じて応援したいと思っています。<br>
-    </div>
-    </section>
-    </div>
-    </div>
-    </article>
+<!--main ---------------------------------------------------->
+    <main class="about-page">
+      <article class="content">
+        <h2 class="content__header">About Me</h2>
+        <div class="inner">
+          <div class="inner__l">
+            <figure>
+              <img alt="清野あずみの写真" class="self-photo" height="350" src="img/self_photo_cl.png">
+            </figure>
+          </div>
+          <div class="inner__r">
+            <section class="profile">
+            <p class="profile__header">名前：清野あずみ</p>
+              <div class="profile__history">
+                <p>筑波大学芸術専門学群卒業</p>
+                <p>同大学大学院人間総合化学研究科 修了（教育学修士）</p>
+                <p>美術科教員を経て、若者就労支援のNPOへ</p>
+                <p>「はたらく」に困難を抱える若者にITを通じた就労支援を届ける一方で、車内デザインを担当。</p>
+                <p>2019年、プログラミングスクールを修了し、プログラミングを習得。</p>
+                <p>「生きづらさ」を抱える人や、そんな人たちを支える誰か、<br>
+                および地域で頑張っているあの人を、<br>
+                デザインやプログラミングを通じて応援したいと思っています。</p>
+              </div>
+            </section>
+          </div>
+        </div>
+      </article>
     </main>
-    </div>
-    
-    </div>
+<!--footer ----------------------------------------------->
+    <footer class="footer">
+      <nav>
+        <ul class="page-nav">
+          <li class="page-nav__list">About</li>
+          <li class="page-nav__list">Works</li>
+          <li class="page-nav__list">Blog</li>
+          <li class="page-nav__list">Contact</li>
+        </ul>
+      </nav>
+      <small class="copy">
+        Copy Right © 2019 Seino Azumi, All Rights Reserved.
+      </small>
+    </footer>
+  </div>
 </body>
 </html>
