--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/import.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Azumi's Portfolio Site</title>
 </head>
 
 <body>
@@ -31,12 +31,12 @@
     </header>
 <!--main ---------------------------------------------------->
     <main class="about-page">
-      <article class="content">
+      <article class="about-page__content">
         <h2 class="content__header">About Me</h2>
         <div class="inner">
           <div class="inner__l">
-            <figure>
-              <img alt="清野あずみの写真" class="self-photo" height="350" src="img/self_photo_cl.png">
+            <figure class="self-photo">
+              <img alt="清野あずみの写真" height="350" src="img/self_photo_cl.png">
             </figure>
           </div>
           <div class="inner__r">
