--- a/about.html
+++ b/about.html
@@ -11,8 +11,9 @@
 <body>
   <div class="wrapper">
 <!--header ------------------------------------------------>
-    <header class="header">
-      <div class="header__nav">
+<header class="header">
+    <div class="header__nav">
+      <div class="content__inner">
         <nav class="header__nav--l">
           <ul class="social-link">
             <li class="social-link__fb">F</li>
@@ -27,13 +28,13 @@
             <li class="page-nav__list">Contact</li>
           </ul>
         </nav>
-      </div>
-    </header>
+      </div> <!--end.content__inner-->
+    </div>
 <!--main ---------------------------------------------------->
     <main class="about-page">
       <article class="about-page__content">
         <h2 class="content__header">About Me</h2>
-        <div class="inner">
+        <div class="content__inner">
           <div class="inner__l">
             <figure class="self-photo">
               <img alt="清野あずみの写真" height="350" src="img/self_photo_cl.png">
