--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
           <div class="blog__content">
             <div class="media">
               <figure class="media__img">
-                <img alt="dummy" src="http://placehold.jp/100x100.png">
+                <img alt="dummy" src="img/hatenablog-logo.svg">
               </figure>
               <p class="media__description">はてなブログでは日々の学習の気づきを書いています</p>
             </div>
             <div class="media">
               <figure class="media__img">
-                <img alt="dummy" src="http://placehold.jp/100x100.png">
+                <img alt="dummy" src="img/wantedly_mark.svg">
               </figure>
               <p class="media__descriprion">Wantedlyには転職活動に関する情報を記載しています</p>
             </div>
