modify css to sp page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <img alt="プログラミングのイメージ" src="img/pc.jpg">
               </figure>
               <div class="app__description">
-                <h3>WEB App & Design</h3>
+                <h3 class="works__header">WEB App & Design</h3>
                 <p>Ruby on Rails, JavaScript, PHPなどを持ちいたWEBアプリケーションが製作できます。</p>
               </div>
 
@@ -73,7 +73,7 @@
                 <img alt="DTPのイメージ" src="img/dtp.jpg">
               </figure>
               <div class="design__description">
-                <h3>DTP</h3>
+                <h3 class="works__header">DTP</h3>
                 <p>Photoshop, Illustratorなどを用いた紙媒体の製作物の製作実績をご紹介いたします。</p>
               </div>
             </section>
@@ -83,7 +83,7 @@
                 <img alt="その他の作業のイメージ" src="img/other.jpg">
               </figure>
               <div class="other__description">
-                  <h3>Other Works</h3>
+                  <h3 class="works__header">Other Works</h3>
                 <p>動画コンテンツ・IT講習テキスト・講演実績などその他の実績をご紹介いたします。</p>
               </div>
             </section>
@@ -149,11 +149,11 @@
             <li class="page-nav__list">Contact</li>
           </ul>
         </nav>
-        <p id="scroll-top-btn">
+        <button id="scroll-top-btn">
           <i class="fas fa-chevron-up icon-allow-up"></i>
-        </p>
+        </button>
         <small class="copy">
-          Copy Right © 2019 Seino Azumi, All Rights Reserved.
+          <p>Copy Right © 2019 Seino Azumi, All Rights Reserved.</p>
         </small>
       </div><!--end.content__inner-->
     </footer>
