--- a/index.html
+++ b/index.html
@@ -93,12 +93,32 @@
 
       <article class="works">
         <div class="content__inner">
-        <h2 class="works__header">Pick Up Works</h2>
-          <div class="slider">
-            <img alt="slider" class="slide" src="http://placehold.jp/270x200.png">
-            <img alt="slider" class="slide" src="http://placehold.jp/270x200.png">
-            <img alt="slider" class="slide" src="http://placehold.jp/270x200.png">
-            <img alt="slider" class="slide" src="http://placehold.jp/270x200.png">
+          <h2 class="works__header">Pick Up Works</h2>
+
+          <div class="slideshow">
+            <div class="slideshow-slides">
+              <div class="slide">
+                <img alt="slider" src="http://placehold.jp/270x200.png">
+              </div>
+              <div class="slide">
+                  <img alt="slider" src="http://placehold.jp/270x200.png">
+              </div>
+              <div class="slide">
+                <img alt="slider" src="http://placehold.jp/270x200.png">
+              </div>
+              <div class="slide">
+                <img alt="slider" src="http://placehold.jp/270x200.png">
+              </div>
+            </div>
+          
+            <div class="slideshow-nav">
+              <a href="#" class="prev"></a>
+              <a href="#" class="next"></a>
+            </div>
+
+            <div class="slideshow-indicator"></div>
+          </div><!--end .slideshow-->
+
           </div>
           <div class="bottom-info">
             <p>See More</p>
@@ -149,7 +169,7 @@
             <li class="page-nav__list">Contact</li>
           </ul>
         </nav>
-        <button id="scroll-top-btn">
+        <button class="scroll-top-btn">
           <i class="fas fa-chevron-up icon-allow-up"></i>
         </button>
         <small class="copy">
