--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/import.css">
+  <script type="text/javascript" src="js/import.js"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Azumi's Portfolio Site</title>
 </head>
@@ -11,25 +12,26 @@
 <body>
   <div class="wrapper">
 <!--header ------------------------------------------------>
-<header class="header">
-    <div class="header__nav">
-      <div class="content__inner">
-        <nav class="header__nav--l">
-          <ul class="social-link">
-            <li class="social-link__fb">F</li>
-            <li class="social-link__tw">T</li>
-          </ul>
-        </nav>
-        <nav class="header__nav--r">
-          <ul class="page-nav">
-            <li class="page-nav__list">About</li>
-            <li class="page-nav__list">Works</li>
-            <li class="page-nav__list">Blog</li>
-            <li class="page-nav__list">Contact</li>
-          </ul>
-        </nav>
-      </div> <!--end.content__inner-->
-    </div>
+    <header class="header">
+        <div class="header__nav">
+          <div class="content__inner">
+            <nav class="header__nav--l">
+              <ul class="social-link">
+                <a href="https://www.facebook.com/" target="_blank"><li class="social-link__fb fab fa-facebook-f"></li></a>
+                <a href="https://twitter.com/azmengineer" target="_blank"><li class="social-link__tw fab fa-twitter"></li></a>
+              </ul>
+            </nav>
+            <nav class="header__nav--r">
+              <ul class="page-nav">
+                <li class="page-nav__list"><a href="about.html">About</a></li>
+                <li class="page-nav__list"><a href="works.html">Works</a></li>
+                <li class="page-nav__list"><a href="index.html#blog">Blog</a></li>
+                <li class="page-nav__list"><a href="index.html#contact">Contact</a></li>
+              </ul>
+            </nav>
+          </div> <!--end.content__inner-->
+        </div>
+
 <!--main ---------------------------------------------------->
     <main class="about-page">
       <article class="about-page__content">
@@ -62,10 +64,10 @@
     <footer class="footer">
       <nav>
         <ul class="page-nav">
-          <li class="page-nav__list">About</li>
-          <li class="page-nav__list">Works</li>
-          <li class="page-nav__list">Blog</li>
-          <li class="page-nav__list">Contact</li>
+            <li class="page-nav__list"><a href="about.html">About</a></li>
+            <li class="page-nav__list"><a href="works.html">Works</a></li>
+            <li class="page-nav__list"><a href="index.html#blog">Blog</a></li>
+            <li class="page-nav__list"><a href="index.html#contact">Contact</a></li>
         </ul>
       </nav>
       <small class="copy">
