add simple gallery

--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
           <div class="slideshow">
             <div class="slideshow-slides">
               <div class="slide">
-                <img alt="slider" src="img/sakuraen_thumb01.jpg" width="270">
+                <img alt="slider" src="img/slides/sakuraen_thumb01.jpg" width="270">
               </div>
               <div class="slide">
-                  <img alt="slider" src="img/moyacafe_thumb.jpg" width="270">
+                  <img alt="slider" src="img/slides/moyacafe_thumb.jpg" width="270">
               </div>
               <div class="slide">
-                <img alt="slider" src="img/sakuraen_thumb02.jpg" width="270">
+                <img alt="slider" src="img/slides/sakuraen_thumb02.jpg" width="270">
               </div>
               <div class="slide">
-                <img alt="slider" src="img/sugoroku_thumb.png" width="270">
+                <img alt="slider" src="img/slides/sugoroku_thumb.png" width="270">
               </div>
             </div>
           
@@ -159,7 +159,9 @@
 
             <div class="way">
               <figure>
-                  <img src="img/wantedly_mark.svg" width="30">
+                <a href="https://www.wantedly.com/users/3373640" target="_blank">
+                <img src="img/wantedly_mark.svg" width="30">
+                </a>
               </figure>
               <p>メールアドレスを掲載しています</p>
             </div>
