modify css and images

--- a/works.html
+++ b/works.html
@@ -33,8 +33,12 @@
       </div>
 
 <!--main -------------------------------------------------------------->
-<main>
-  <ul class="gallery" id="gallery"></ul>
+<main class="works-page">
+  <div class="works__content">
+    <div class="content__inner">
+      <ul class="gallery" id="gallery"></ul>
+    </div>
+  </div><!--end.works__content-->
 </main>
 
 <!--footer ------------------------------------------------------>
