--- a/about.html
+++ b/about.html
@@ -38,24 +38,35 @@
         <h2 class="content__header">About Me</h2>
         <div class="content__inner">
           <div class="inner__l">
-            <figure class="self-photo">
-              <img alt="清野あずみの写真" height="350" src="img/self_photo_cl.png">
+            <figure class="self_photo">
+              <img alt="清野あずみの写真" height="450" src="img/self_photo_cl.png">
             </figure>
           </div>
           <div class="inner__r">
             <section class="profile">
-            <p class="profile__header">名前：清野あずみ</p>
+            <h3 class="profile__header">名前：清野あずみ</h3>
               <div class="profile__history">
                 <p>筑波大学芸術専門学群卒業</p>
                 <p>同大学大学院人間総合化学研究科 修了（教育学修士）</p>
                 <p>美術科教員を経て、若者就労支援のNPOへ</p>
-                <p>「はたらく」に困難を抱える若者にITを通じた就労支援を届ける一方で、車内デザインを担当。</p>
+                <br>
+                <p>「はたらく」に困難を抱える若者にITを通じた就労支援を届ける一方で、社内デザインを担当。</p>
                 <p>2019年、プログラミングスクールを修了し、プログラミングを習得。</p>
                 <p>「生きづらさ」を抱える人や、そんな人たちを支える誰か、<br>
                 および地域で頑張っているあの人を、<br>
                 デザインやプログラミングを通じて応援したいと思っています。</p>
               </div>
             </section>
+
+            <section class="profile">
+              <h3 class="profile__header">スキル</h3>
+                <div class="profile__history">
+                  <p>言語：</p>
+                  <p>Ruby, Ruby on Rails, JQuery, HTML, CSS</p>
+                  <p>ソフト：</p>
+                  <p>Adobe Illustrator, Photoshop, InDesign</p>
+                </div>
+              </section>
           </div>
         </div>
       </article>
