add mordal window

--- a/works.html
+++ b/works.html
@@ -39,11 +39,21 @@
       <ul class="gallery" id="gallery"></ul>
     </div>
   </div><!--end.works__content-->
+
+  <div class="mordal" id="mordal">
+    <div class="mordal__inner" id="mordal__inner">
+        <i class="fas fa-times mordal__close"></i>
+        <div class="works__info">
+
+        </div>
+    </div>
+  </div>
 </main>
 
 <!--footer ------------------------------------------------------>
 <footer class="footer">
     <div class="content__inner">
+
       <nav>
         <ul class="page-nav">
             <li class="page-nav__list"><a href="about.html">About</a></li>
