--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
             </nav>
             <nav class="header__nav--r">
               <ul class="page-nav">
+                <li class="page-nav__list"><a href="index.html">Home</a></li>
                 <li class="page-nav__list"><a href="about.html">About</a></li>
                 <li class="page-nav__list"><a href="works.html">Works</a></li>
                 <li class="page-nav__list"><a href="index.html#blog">Blog</a></li>
-                <li class="page-nav__list"><a href="index.html#contact">Contact</a></li>
               </ul>
             </nav>
           </div> <!--end.content__inner-->
@@ -75,10 +75,10 @@
     <footer class="footer">
       <nav>
         <ul class="page-nav">
-            <li class="page-nav__list"><a href="about.html">About</a></li>
-            <li class="page-nav__list"><a href="works.html">Works</a></li>
-            <li class="page-nav__list"><a href="index.html#blog">Blog</a></li>
-            <li class="page-nav__list"><a href="index.html#contact">Contact</a></li>
+          <li class="page-nav__list"><a href="index.html">Home</a></li>
+          <li class="page-nav__list"><a href="about.html">About</a></li>
+          <li class="page-nav__list"><a href="works.html">Works</a></li>
+          <li class="page-nav__list"><a href="index.html#blog">Blog</a></li>
         </ul>
       </nav>
       <small class="copy">
