--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
           </nav>
           <nav class="header__nav--r">
             <ul class="page-nav">
+              <li class="page-nav__list"><a href="index.html">Home</a></li>
               <li class="page-nav__list"><a href="about.html">About</a></li>
               <li class="page-nav__list"><a href="works.html">Works</a></li>
               <li class="page-nav__list"><a href="index.html#blog">Blog</a></li>
-              <li class="page-nav__list"><a href="index.html#contact">Contact</a></li>
             </ul>
           </nav>
         </div> <!--end.content__inner-->
@@ -130,7 +130,7 @@
         <div class="content__inner">
           <h2 class="blog__header">Blog and Info.</h2>
             <div class="blog__content">
-              <a href="https://www.facebook.com/" target="_blank">
+              <a href="https://azmengineer.hateblo.jp/" target="_blank">
                 <div class="media">
                   <figure class="media__img">
                     <img alt="dummy" src="img/hatenablog-logo.svg">
@@ -185,10 +185,10 @@
       <div class="content__inner">
         <nav>
           <ul class="page-nav">
-              <li class="page-nav__list"><a href="about.html">About</a></li>
-              <li class="page-nav__list"><a href="works.html">Works</a></li>
-              <li class="page-nav__list"><a href="index.html#blog">Blog</a></li>
-              <li class="page-nav__list"><a href="index.html#contact">Contact</a></li>
+            <li class="page-nav__list"><a href="index.html">Home</a></li>
+            <li class="page-nav__list"><a href="about.html">About</a></li>
+            <li class="page-nav__list"><a href="works.html">Works</a></li>
+            <li class="page-nav__list"><a href="index.html#blog">Blog</a></li>
           </ul>
         </nav>
         <button class="scroll-top-btn">
