change slide images

--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
           <div class="slideshow">
             <div class="slideshow-slides">
               <div class="slide">
-                <img alt="slider" src="img/slides/sakuraen_thumb01.jpg" width="270">
+                <img alt="slider" src="img/slides/dljHP_pickup.jpg" width="270">
               </div>
               <div class="slide">
-                  <img alt="slider" src="img/slides/moyacafe_thumb.jpg" width="270">
+                  <img alt="slider" src="img/slides/moyacafe_pickup.jpg" width="270">
               </div>
               <div class="slide">
-                <img alt="slider" src="img/slides/sakuraen_thumb02.jpg" width="270">
+                <img alt="slider" src="img/slides/sakuraen_pickup.jpg" width="270">
               </div>
               <div class="slide">
-                <img alt="slider" src="img/slides/sugoroku_thumb.png" width="270">
+                <img alt="slider" src="img/slides/sugorokuApp_pickup.jpg" width="270">
               </div>
             </div>
           
