modify what i can do message

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </figure>
               <div class="app__description">
                 <h3 class="works__header">WEB App & Design</h3>
-                <p>Ruby on Rails, JavaScript, PHPなどを持ちいたWEBアプリケーションが製作できます。</p>
+                <p>Ruby on Rails, JavaScript, PHPなどを用いたWEBアプリケーションが製作できます。</p>
               </div>
 
             </section>
@@ -74,7 +74,7 @@
               </figure>
               <div class="design__description">
                 <h3 class="works__header">DTP</h3>
-                <p>Photoshop, Illustratorなどを用いた紙媒体の製作物の製作実績をご紹介いたします。</p>
+                <p>Photoshop, Illustratorなどを用いた製作が可能です。InDesign, Premiere Pro, Adobe XDなどの使用経験もあります。</p>
               </div>
             </section>
 
@@ -84,7 +84,7 @@
               </figure>
               <div class="other__description">
                   <h3 class="works__header">Other Works</h3>
-                <p>動画コンテンツ・IT講習テキスト・講演実績などその他の実績をご紹介いたします。</p>
+                <p>動画コンテンツ・IT講習テキスト・ファンドレイジングのためのコンテンツ制作などの実績もあります。</p>
               </div>
             </section>
           </div><!--end.info__content-->
