modfy social link

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
           <div class="content__inner">
             <nav class="header__nav--l">
               <ul class="social-link">
-                <a href="https://www.facebook.com/" target="_blank"><li class="social-link__fb fab fa-facebook-f"></li></a>
+                <a href="https://www.facebook.com/seinoazumi" target="_blank"><li class="social-link__fb fab fa-facebook-f"></li></a>
                 <a href="https://twitter.com/azmengineer" target="_blank"><li class="social-link__tw fab fa-twitter"></li></a>
               </ul>
             </nav>
