Add progress bar to work page

--- a/works.html
+++ b/works.html
@@ -31,27 +31,32 @@
           </nav>
         </div> <!--end.content__inner-->
       </div>
-
+    </header>
 <!--main -------------------------------------------------------------->
-<main class="works-page">
-  <div class="works__content">
-    <div class="content__inner">
-      <ul class="gallery" id="gallery"></ul>
-    </div>
-  </div><!--end.works__content-->
+  <main class="works-page works-content">
+    <div class="works__content">
+      <div class="content__inner">
+        <ul class="gallery" id="gallery"></ul>
+      </div>
+    </div><!--end.works__content-->
 
-  <div class="mordal" id="mordal">
-    <div class="mordal__inner" id="mordal__inner">
-        <i class="fas fa-times mordal__close"></i>
-        <div class="works__info">
+    <div class="mordal" id="mordal">
+      <div class="mordal__inner" id="mordal__inner">
+          <i class="fas fa-times mordal__close"></i>
+          <div class="works__info">
 
-        </div>
+          </div>
+      </div>
     </div>
+
+  </main>
+
+  <div class="progress" id="progress">
+    <span class="progress-bar"></span>
+    <span class="progress-text">0%</span>
   </div>
-</main>
-
 <!--footer ------------------------------------------------------>
-<footer class="footer">
+  <footer class="footer">
     <div class="content__inner">
 
       <nav>
@@ -70,6 +75,9 @@
       </small>
     </div><!--end.content__inner-->
   </footer>
-</div><!--end.wrapper--> 
+
+</div><!--end.wrapper-->
+
+<!-- progress bar -->
 </body>
 </html>
