add: rel="noopener"の付与

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
           <div class="content__inner">
             <nav class="header__nav--l">
               <ul class="social-link">
-                <a href="https://www.facebook.com/seinoazumi" target="_blank"><li class="social-link__fb fab fa-facebook-f"></li></a>
-                <a href="https://twitter.com/azmengineer" target="_blank"><li class="social-link__tw fab fa-twitter"></li></a>
+                <a href="https://www.facebook.com/seinoazumi" target="_blank" rel="noopener"><li class="social-link__fb fab fa-facebook-f"></li></a>
+                <a href="https://twitter.com/azmengineer" target="_blank" rel="noopener"><li class="social-link__tw fab fa-twitter"></li></a>
               </ul>
             </nav>
             <nav class="header__nav--r">
