--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="content__inner">
           <h2 class="blog__header">Blog and Info.</h2>
             <div class="blog__content">
-              <a href="https://azmengineer.hateblo.jp/" target="_blank">
+              <a href="https://azmengineer.hateblo.jp/" target="_blank" rel="noopener">
                 <div class="media">
                   <figure class="media__img">
                     <img alt="dummy" src="img/hatenablog-logo.svg">
@@ -139,7 +139,7 @@
                 </div>
               </a>
             
-              <a href="https://www.wantedly.com/users/3373640" target="_blank">
+              <a href="https://www.wantedly.com/users/3373640" target="_blank" rel="noopener">
                 <div class="media">
                   <figure class="media__img">
                     <img alt="dummy" src="img/wantedly_mark.svg">
@@ -159,18 +159,18 @@
 
             <div class="way">
               <figure>
-                <a href="https://www.wantedly.com/users/3373640" target="_blank">
-                <img src="img/wantedly_mark.svg" width="30">
+                <a href="https://www.wantedly.com/users/3373640" target="_blank" rel="noopener">
+                <img src="img/wantedly_mark.svg" width="30" alt="wantedly">
                 </a>
               </figure>
               <p>メールアドレスを掲載しています</p>
             </div>
 
             <div class="way">
-              <a href="https://twitter.com/azmengineer" target="_blank">
+              <a href="https://twitter.com/azmengineer" target="_blank" rel="noopener">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="https://www.facebook.com/" target="_blank">
+              <a href="https://www.facebook.com/" target="_blank" rel="noopener">
                 <i class="social-link__fb fab fa-facebook-f"></i>
               </a>
               <p>制作依頼・面談ご連絡歓迎します</p>
